Fixed image stretching on mobile

--- a/index.css
+++ b/index.css
@@ -321,6 +321,7 @@ textarea {
     margin-bottom: 0px;
 
     width: 20%;
+    height: 20%;
 
     margin-bottom: 0px;
 }
